lib/src/compiler/tests/testdata/errors/62.out
error[E001]: syntax error
 --> line:1:6
  |
1 | rule 1_foo { condition: true }
  |      ^ expecting identifier, found `1`
  |